dnl Process this file with autoconf to produce a configure script.
AC_INIT(COPYING)

EEL_VERSION=0.1.11

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(eeltest, $EEL_VERSION)

AC_PROG_CC
AC_C_CONST
AC_PROG_MAKE_SET
AC_PROG_INSTALL

case "$target" in
    alpha*-*-linux*)
	CFLAGS="$CFLAGS -mcpu=ev4 -Wa,-mall"
        MATHLIB="-lm"
        ;;
    *-*-cygwin* | *-*-mingw32*)
	if test "$build" != "$target"; then # cross-compiling
            # Default cross-compile location
            ac_default_prefix=/usr/local/cross-tools/i386-mingw32msvc
	else
            # Look for the location of the tools and install there
            if [ "$BUILD_PREFIX" != "" ]; then
                ac_default_prefix=$BUILD_PREFIX
            fi
	fi
	LDFLAGS="$LDFLAGS -no-undefined -mwindows -export-dynamic -avoid-version"
        MATHLIB=""
        ;;
    *-*-beos*)
	ac_default_prefix=/boot/develop/tools/gnupro
        MATHLIB=""
        ;;
    *-*-darwin*)
	CFLAGS="$CFLAGS -DMACOSX"
        MATHLIB=""
        ;;
    *-*-aix*)
        if test x$ac_cv_prog_gcc = xyes; then
            CFLAGS="-mthreads"
	fi
        ;;
    *)
        MATHLIB="-lm"
        ;;
esac
AC_SUBST(MATHLIB)


dnl---------------------------------------------------------
dnl Check for EEL
dnl---------------------------------------------------------
AM_PATH_EEL($EEL_VERSION,
            :,
	    AC_MSG_ERROR([*** EEL version $EEL_VERSION not found!])
)
CFLAGS="$CFLAGS $EEL_CFLAGS"
LIBS="$LIBS $EEL_LIBS"

AC_OUTPUT([
Makefile
])
